@@ -1,0 +1,31 @@
+<div class="row">
+    <div class="span3">
+        <ul class="nav nav-list">
+            <li class="nav-header"><i class="icon-tag"></i> About</li>
+            <li><a href="CHANGELOG.html">Changelog</a></li>
+            <li class="divider"></li>
+            <li>Version <span class="badge badge-info">{revnumber}</span></li>
+            <li>{docdate} {doctime}</li>
+        </ul>
+    </div>
+    <div class="span3">
+        <ul class="nav nav-list">
+            <li class="nav-header"><i class="icon-book"></i> Get Started</li>
+            <li><a href="text-formatting.html">Text Formatting</a></li>
+            <li><a href="delimited-blocks.html">Delimited Blocks</a></li>
+            <li><a href="paragraphs.html">Paragraphs</a></li>
+            <li><a href="document-structure.html">Document Structure</a></li>
+            <li class="divider"></li>
+            <li><a href="base-css-book.html">Base CSS</a></li>
+        </ul>
+    </div>
+    <div class="span3">
+        <ul class="nav nav-list">
+            <li class="nav-header"><i class="icon-comment"></i> Get Help</li>
+            <li><a href="https://github.com/llaville/asciidoc-bootstrap-backend/issues">Report an issue</a></li>
+        </ul>
+    </div>
+    <div class="span3">
+        <a href="#" class="btn btn-info btn-block"><i class="icon-arrow-up icon-white"></i> Back to top</a>
+    </div>
+</div>
